# shape-from-rot

./: .gitignore  CMakeLists.txt  README.md
expt/toy/: camera.txt  config.txt  output_L.txt  output_W.txt  output_X.txt  output_Z.txt
src/: PropagateFactor.cpp  PropagateFactor.h  VariableCovGaussian.h  coordtrans.h  main.cpp  sfr.cpp  sfr.h
